--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<title>My First Page</title>
 </head>
 <body>
-Hello World how r u?
+<p>
+	<h1>Fahad Ali Qureshi</h1>
+	<h2>Semester 8</h2>
+	<h3>FYP = Augmented Reality 3D Maze Game</h3>
+</p>
 </body>
 </html>
